Small Fix
Fixed issue where games & description would look weird right before the media query kicks in when the screen got a certain width.
- Changed the max-width to 665px

--- a/Grid Games/style1.css
+++ b/Grid Games/style1.css
@@ -89,7 +89,7 @@ article {
 	box-shadow: rgba(0,0,0,0.6) 0px 5px 15px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 665px) {
 	.description {
 		font-size: .90rem;
 		padding: 0px;
